Align text, fix padding

--- a/app/assets/stylesheets/analysis.scss
+++ b/app/assets/stylesheets/analysis.scss
@@ -10,7 +10,8 @@ div.pupil-chart-titles {
   }
   h5 {
     margin-left: 10px;
-    padding-left: 10px
+    padding-left: 10px;
+    padding-top: 0px;
   }
 }
 
